--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node index.js",
+    "start": "node index.js",
     "start:dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,10 +17,8 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^10.0.0",
-    "mongodb": "^3.6.9"
+    "mongodb": "^3.6.9",
+    "nodemon": "^2.0.9"
   },
-  "devDependencies": {
-   
-    "nodemon" :"^2.0.9"
-  }
+  "devDependencies": {}
 }
