--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs-extra": "^10.0.0",
-    "mongodb": "^3.6.9",
-    "nodemon": "^2.0.9"
+    "mongodb": "^3.6.9"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "nodemon": "^2.0.9"
+  }
 }
